# cplus2asp

./: .gitignore  .gitmodules  INSTALL.txt  LICENSE.txt  Makefile.am  Makefile.in  README.txt  bootstrap.sh  clean.sh  config.h.in  configure  configure.ac  install.sh  update.sh
as2transition/: .cproject  .project  as2transition
as2transition/src/: Predicate.cpp  Predicate.h  README  StringUtils.cpp  TimeStepInfo.cpp  TimeStepInfo.h  as2transition  as2transition.cpp
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
build-scripts/: autoclean.sh  boost.m4
cplus2asp/: .cproject  .project
cplus2asp.bin/: .cproject  .project
cplus2asp.bin/src/: CMakeCache.txt  CMakeLists.txt  IncludeHandler.cpp  MacroParser.cpp  Makefile  README  Translator.cpp  Translator.h  cmake_install.cmake  cplus2asp.bin_Documentation.Doxyfile  extract_grammar.sh  flexer.cpp  flexer.h  flexer.l  flexer.l~  flexertypes.h  grammar.txt  grammar.txt~  install_manifest.txt  lexerTokenStream.cpp  lexerTokenStream.h  main.cpp  parser.cpp  parser.h  parser.output  parser.y  parser.y~  parser_types.cpp  parser_types.h  types.h  utilities.cpp  utilities.h
cplus2asp.bin/src/DataStructs/: ASPCode.h  Attribute.cpp  Attribute.h  Comment.cpp  Constant.cpp  Constant.h  Constant.re2c  Context.cpp  Context.h  Element.cpp  Element.h  ElementCounter.cpp  ElementCounter.h  Macro.h  NumberRange.cpp  NumberRange.h  Object.cpp  Object.h  Query.h  Sort.cpp  Sort.h  SymbolTable.cpp  SymbolTable.h  Variable.cpp  Variable.h
cplus2asp/src/: Config.cpp  Config.h  Config.re2c  Makefile  README  cplus2asp  cplus2asp.cpp  cplus2asp.doxyfile  cplus2asp.re2c  cplus2asp_additive.f2lp  cplus2asp_additive.of2lp  cplus2asp_std.f2lp  cplus2asp_std.of2lp  utils.cpp  utils.h
examples/: bc.sh  etc.sh  lua.sh
examples/bc/: bw-alt.bc  bw.asp  bw.bc  bw.of2lp
examples/bc+/: bw.bc+  choice-test.bc+  monkey.bc+
examples/benchmarks/: bw-15-benchmark.cp  ferryman-10-4-benchmark.alc  ferryman-10-4-benchmark.cp  ferryman-10-4-benchmark.stat  ferryman-10-4.out  ferryman-15-4-benchmark.alc  ferryman-15-4-benchmark.cp  ferryman-15-4-benchmark.stat  ferryman-15-4.out  hanoi-6-3-benchmark.alc  hanoi-6-3-benchmark.stat  hanoi-8-4-benchmark.alc  mem_tracker.sh  mkgrdtimes.sh  mkiclingotimes.sh  spacecraft-15-8-benchmark.cp  spacecraft-15-8.out  spacecraft-25-10-benchmark.cp  start.sh  traffic-altmerge.out
examples/benchmarks/blocks-bench-15/: bw-15-benchmark.cp  bw-15.out
examples/cplus/: additive.sh  etc.sh  mcp.sh  nmct.sh  traffic.sh  zoo.sh
examples/etc/: code_blocks
examples/lua/: bw-path.bc  random.cp  simple-lua  simple-lua-2.cp  simple-lua.cp
examples/mvpf/: monkey.mvpf  nqueens.asp  nqueens.mvpf  nqueens2.mvpf  test.mvpf  test2.mvpf
examples/obc+/: blocks.obcp  hanoi.obcp
release/: install.sh
release/precompiled/: compile.sh  compress.sh
release/tests/: cplus2asp-test-results.docx  nmct.sh
src/: Makefile.shared
src/acplusbridge/: Driver.cpp  Driver.h  Makefile.am  NetworkClient.cpp  NetworkClient.h  acplusbridge  as2transition  cmd  main.cpp  tmp.in
src/as2transition/: Config.h  Makefile.am  Predicate.cpp  Predicate.h  StringUtils.cpp  StringUtils.h  TimeStepInfo.cpp  TimeStepInfo.h  as2transition.cpp  as2transition.doxyfile  makefile.old
src/bcbridge/: Driver.cpp  Driver.h  Makefile.am  NetworkClient.cpp  NetworkClient.h  main.cpp
src/common/: Referenced.cpp  Referenced.h  referencedwrappers.h
src/cplus2asp/: Config.cpp  Config.h  Config.r2c  Config.re2c  Interpreter.cpp  Interpreter.h  Interpreter.r2c  Interpreter.re2c  Makefile.am  cplus2asp.cpp  cplus2asp.r2c  cplus2asp.re2c  cplus2asp_additive.f2lp  cplus2asp_additive.of2lp  cplus2asp_std.f2lp  cplus2asp_std.of2lp  mvpf_std.f2lp  utils.cpp  utils.h
src/cplus2asp.bin/: '  CMakeLists.txt  Configuration.cpp  Configuration.h  Configuration.r2c  ConstantData.cpp  ConstantData.h  Context.cpp  Context.h  FormulaPredicate.h  IncludeHandler.cpp  IncludeHandler.h  MacroParser.cpp  MacroParser.h  Makefile.am  ObjectData.cpp  ObjectData.h  RangeData.cpp  RangeData.h  SortData.cpp  SortData.h  Translator.cpp  Translator.h  extract_grammar.sh  flexer.cpp  flexer.h  flexer.l  flexer.ll  flexertypes.h  languages.h  lexerTokenStream.cpp  lexerTokenStream.h  ltsglobals.cpp  ltsglobals.h  main.cpp  makefile.old  out  parser.cc  parser.cpp  parser.h  (+10 more)
src/cplus2asp.bin/DataStructs/: ASPCode.cpp  ASPCode.h  Attribute.cpp  Attribute.h  Comment.cpp  Comment.h  Constant.cpp  Constant.h  Constant.re2c  Context.cpp  Context.h  Element.cpp  Element.h  ElementCounter.cpp  ElementCounter.h  LUAObject.h  Macro.cpp  Macro.h  NumberRange.cpp  NumberRange.h  Object.cpp  Object.h  Query.cpp  Query.h  Sort.cpp  Sort.h  SymbolTable.cpp  SymbolTable.h  Token.cpp  Token.h  TokenStream.cpp  TokenStream.h  Variable.cpp  Variable.h  datastruct_externs.h
src/cplus2asp.bin/old/: Translator.cpp  Translator.h  utilities.cpp  utilities.h
src/cplus2asp/toolchain/: Toolchain.h
tests/: additive.sh  domains.todo  etc.sh  nmct.sh  traffic.sh  zoo.sh
tests/additive_handout/: available  buying  buying-test  bw  bw-cost  bw-cost-test  intro-test  intro1  intro2  spacecraft  spacecraft-test
tests/benchmarks/: traffic-benchmark.cp  traffic.sh  zoo-benchmark.cp
tests/domains/: bw  bw-ccalc  bw-cost  bw-cost-test  bw-perfect  bw-perfect-test  bw-serializable  bw-serializable-h-test  bw-serializable-test  bw-sizes  bw-sizes-test  bw-test  clique  color  going  graph  hanoi  hanoi2  has  intro1  intro2  intro2m  intro2s  intro4  intro4m  mcp  mcp-test  multiple-monkey  multiple-monkey-test  pendulum  publishing  selim-snack  simple  snack  spacecraft  tmp.out  tmp.out2  traffic
tests/mcp/: common1  common2  jmc10  jmc13  two-boats-test
tests/out-ccalc/: additive-output  bw-output  nmct-output  output  output1  output2  output3  output4  output5  traffic-output  zoo-output
tests/output/: additive.out  etc.out  nmct.out
tests/tutorial-exercises/: coins4.cplus  e2_6.query  e3_2.query  e3_4.query  shooting-nondet.cplus  shooting.cplus
(+142 files in other folders)
